--- a/package.json
+++ b/package.json
@@ -9,22 +9,20 @@
   },
   "author": "Benjamin Kaiser",
   "license": "MIT",
-  "devDependencies": {
+  "dependencies": {
     "@types/agenda": "^4.1.0",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/web-push": "^3.3.2",
-    "agendash": "^2.1.1",
-    "esbuild": "^0.14.14",
-    "esbuild-node-tsc": "^1.8.2",
-    "nodemon": "^2.0.15"
-  },
-  "dependencies": {
-    "@types/cors": "^2.8.12",
     "agenda": "^4.2.1",
+    "agendash": "^2.1.1",
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
     "dotenv": "^14.3.2",
+    "esbuild-node-tsc": "^1.8.2",
+    "esbuild": "^0.14.14",
     "express": "^4.17.2",
+    "nodemon": "^2.0.15",
     "typescript": "^4.5.5",
     "web-push": "^3.4.5"
   }
